# FormulaCEM

BMS (Battery Monitoring System)/: Integração CAN com BMS.md  Integração CAN com BMS.rm
DashBoard EV 2023/Arquivos Display/: Constantes.txt  filelist.txt
DashBoard EV 2023/Arquivos Display/fonts/: ui_font_SuiGen24.c  ui_font_SuiGen40.c
DashBoard EV 2023/Arquivos Display/screens/: ui_Screen1.c
DashBoard EV 2023/Códigos/: Read me.txt
DashBoard EV 2023/Códigos/Arquivos exportados do SquareLine Studio/: CMakeLists.txt  filelist.txt  ui.h
DashBoard EV 2023/Códigos/Codigo_Completo/: Codigo_Completo.ino  ui.c
DashBoard EV 2023/Códigos/Codigo_base_display/: Codigo_base_display.ino
DashBoard EV 2023/Códigos/Codigo_teste_cartao_SD/: Codigo_teste_cartao_SD.ino
DashBoard EV 2023/Códigos/comunicacao_can/: comunicacao_can.ino
DashBoard EV 2023/Esboço no CAD/: Esboço do Dashboard no painel.SLDPRT
DashBoard EV 2023/Main-display/: ui.c  ui.h  ui_font_SuiGeneris24.c
DashBoard EV 2023/Projeto SquareLine/: SquareLine_Project.sll  SquareLine_Project.spj
DashBoard EV 2023/Projeto SquareLine/assets/: ui_font_OxaniumBold25.c  (+17 more)
DashBoard EV 2023/SquareLine Project/: SquareLine_Project.sll  SquareLine_Project.spj
DashBoard EV 2023/esp-now-display/: esp-now-display.ino
DashBoard EV 2023/main/: CMakeLists.txt  Constantes.txt  main.ino  ui.c  ui.h
DashBoard EV 2023/main/comunicacao_can/: comunicacao_can.ino
DashBoard EV 2023/main/fonts/: ui_font_SuiGen40Ext.c  ui_font_SuiGen90.c
DashBoard EV 2023/main/images/: ui_img_imcard2_png.c
Testes/libraries/: lv_conf.h
(+72 files in other folders)
